# regex

./: .drone.star  .travis.yml  CMakeLists.txt  appveyor.yml
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: bad_expression.html  basic_regex.html  character_class_names.html  concepts.html  configuration.html  contacts.html  error_type.html  examples.html  faq.qbk  gcc-performance.html  history.html  history.qbk  implementation.html  index.html  install.html  install.qbk  introduction.html  introduction.qbk  localisation.html  match_flag_type.html  partial_matches.html  posix_api.html  redistributables.html  reg_expression.html  regbase.html  regex.html  regex.qbk  regex_format.html  regex_grep.html  regex_iterator.html  regex_match.html  regex_merge.html  regex_replace.html  regex_split.html  regex_token_iterator.html  standards.html  sub_match.html  syntax.html  syntax_basic.html  syntax_extended.html  (+3 more)
doc/Attic/: bad_expression.html  basic_regex.html  collating_names.html  configuration.html  contacts.html  examples.html  faq.html  format_syntax.html  headers.html  history.html  install.html  introduction.html  localisation.html  match_results.html  partial_matches.html  redistributables.html  regex_format.html  regex_grep.html  regex_iterator.html  regex_match.html  regex_replace.html  regex_search.html  regex_token_iterator.html  regex_traits.html  standards.html  syntax.html  syntax_basic.html  syntax_extended.html  syntax_option_type.html  thread_safety.html
doc/html/: index.html
doc/html/boost_regex/: background.html  background_information.html  captures.html  configuration.html  format.html  install.html  intro.html  introduction_and_overview.html  partial_matches.html  ref.html  syntax.html  unicode.html
example/: Jamfile  Jamfile.v2
example/jgrep/: main.cpp
example/snippets/: regex_grep_example_3.cpp  regex_grep_example_4.cpp  regex_replace_example.cpp
example/timer/: regex_timer.cpp
include/boost/: cregex.hpp
include/boost/regex/: concepts.hpp  config.hpp  icu.hpp  mfc.hpp  pattern_except.hpp  static_mutex.hpp  user.hpp
module/: regex.cxx
performance/: Jamfile.v2  command_line.cpp  input.html  main.cpp  performance.cpp  posix.cpp  regex_comparison.hpp  time_boost.cpp  time_localised_boost.cpp  time_pcre.cpp  vc71-results.htm
performance/doc/: performance_tables.qbk
src/: c_regex_traits.cpp  cpp_regex_traits.cpp  cregex.cpp  fileiter.cpp  icu.cpp  posix_api.cpp  regex.cpp  regex_raw_buffer.cpp  regex_traits_defaults.cpp  static_mutex.cpp  w32_regex_traits.cpp  wc_regex_traits.cpp  wide_posix_api.cpp
test/: Jamfile  Jamfile.v2  bad_format_string.cpp  quick.cpp  test_consolidated.cpp  test_macros.hpp  test_warnings.cpp
test/captures/: Jamfile  Jamfile.v2  captures_test.cpp
test/cmake_subdir_test/: CMakeLists.txt
test/collate_info/: collate_info.cpp
test/concepts/: concept_check.cpp  icu_concept_check.cpp  test_bug_11988.cpp
test/config_info/: regex_config_info.cpp
test/de_fuzz/: dictionary.txt  narrow.cpp
test/de_fuzz/corpus/: corpus_1  (+1729 more)
test/module/: credit_card_example.cpp  partial_regex_grep.cpp  partial_regex_iterate.cpp  partial_regex_match.cpp  regex_grep_example_1.cpp  regex_grep_example_2.cpp  regex_grep_example_3.cpp  regex_iterator_example.cpp  regex_match_example.cpp  regex_merge_example.cpp  regex_replace_example.cpp  regex_search_example.cpp  regex_split_example_1.cpp  regex_split_example_2.cpp  regex_token_iterator_eg_1.cpp  regex_token_iterator_eg_2.cpp
test/noeh_test/: Jamfile.v2
test/pathology/: bad_expression_test.cpp
test/regress/: basic_tests.cpp  bc55.mak  bcb4.mak  bcb5.mak  bcb6.mak  gcc.mak  info.hpp  main.cpp  parse.cpp  regex_test.cpp  regress.h  sunpro.mak  test.hpp  test_alt.cpp  test_anchors.cpp  test_asserts.cpp  test_backrefs.cpp  test_deprecated.cpp  test_deprecated.hpp  test_escapes.cpp  test_grep.cpp  test_icu.cpp  test_locale.cpp  test_locale.hpp  test_mfc.cpp  test_non_greedy_repeats.cpp  test_not_regex.hpp  test_operators.cpp  test_perl_ex.cpp  test_regex_replace.hpp  test_regex_search.hpp  test_replace.cpp  test_sets.cpp  test_simple_repeats.cpp  test_tricky_cases.cpp  test_unicode.cpp  tests.cpp  tests.txt  vc6-stlport.mak  vc6.mak  (+2 more)
test/static_mutex/: static_mutex_test.cpp
test/unicode/: unicode_iterator_test.cpp
tools/generate/: tables.cpp
(+197 files in other folders)
